Bug 159625 - Can NOT un-check [allow to split paragraph]
Summary: Can NOT un-check [allow to split paragraph]
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.3 release
Hardware: All All
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:24.8.0 target:24.2.3
Keywords:
Depends on:
Blocks: Paragraph-Dialog
  Show dependency treegraph
 
Reported: 2024-02-07 17:47 UTC by Tracey
Modified: 2024-06-06 13:03 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file PDF and ODT (8.35 MB, application/x-7z-compressed)
2024-02-07 17:47 UTC, Tracey
Details
bugdoc (1.57 MB, application/vnd.oasis.opendocument.text)
2024-02-08 07:30 UTC, Samuel Mehrbrodt
Details
document where "Allow to split paragraph" paragraph property cannot be changed (19.53 KB, application/vnd.oasis.opendocument.text)
2024-04-20 00:13 UTC, Paolo Benvenuto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tracey 2024-02-07 17:47:14 UTC
Created attachment 192454 [details]
sample file PDF and ODT

page 687 & 688
Can NOT un-check [allow to split paragraph]
See attached.
Thanks, Tracey
Comment 1 Julien Nabet 2024-02-07 19:41:42 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this on a brand new empty file so not specific to the attached document.
Comment 2 Julien Nabet 2024-02-07 20:05:49 UTC
Samuel: noticing 47edf86a62784aa275de7cc89df01a4fcd4e90c8
"tdf#156795, tdf#156109 Avoid typesetter language: orphan, widow control
    
Instead use descriptive language to make it obvious what these options are for.
Also invert the logic of the "Do not split paragraph" option as suggested in tdf#156109."

thought you might be interested in this one.
Comment 3 Samuel Mehrbrodt 2024-02-08 07:30:08 UTC
Created attachment 192460 [details]
bugdoc

Uploaded ODT file directly (drop .7z file)
Comment 4 Samuel Mehrbrodt 2024-02-08 07:42:16 UTC
Can't reproduce with recent master.
Can you be more specific, how exactly did you try to uncheck the checkbox?
Also, please paste the content of the About dialog
Comment 5 Julien Nabet 2024-02-09 13:30:45 UTC
(In reply to Samuel Mehrbrodt (allotropia) from comment #4)
> Can't reproduce with recent master.
> Can you be more specific, how exactly did you try to uncheck the checkbox?
> Also, please paste the content of the About dialog

- launch Writer on a brand new file
- select menu Format/Paragraph
- select Text Flow tab
- uncheck "Allow to split paragraph"
- click OK
=> dialog closed : OK

- select again menu Format/Paragraph
- select again Text Flow tab
=> "Allow to split paragraph" is still checked : KO (it shouldn't be)
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5fef3ebe9efd4d4e8569e620e82771f5560c5524
CPU threads: 12; OS: Linux 6.6; UI render: default; VCL: gtk3
Locale: fr-FR (fr_FR.UTF-8); UI: en-US
Calc: threaded
Comment 6 Telesto 2024-02-11 05:29:29 UTC
(In reply to Julien Nabet from comment #5)
I'm able to reproduce comment 5
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ba8f4bff6015013013df652efbfaf4d9ae10c881
CPU threads: 8; OS: macOS 14.3; UI render: Skia/Raster; VCL: osx
Locale: nl-NL (nl_NL.UTF-8); UI: en-US
Calc: threaded
Comment 7 Paolo Benvenuto 2024-04-20 00:13:59 UTC
Created attachment 193761 [details]
document where "Allow to split paragraph" paragraph property cannot be changed
Comment 8 Paolo Benvenuto 2024-04-20 00:15:07 UTC
Confirmed in

Version: 24.2.2.2 (X86_64) / LibreOffice Community
Build ID: 420(Build:2)
CPU threads: 16; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-US (C.UTF-8); UI: en-US
Ubuntu package version: 4:24.2.2~rc2-0ubuntu0.22.04.1~lo1
Calc: threaded

on ubuntu 22.04

Both checkin and unchecking the "Allow to split paragraph" check box aren't retained, in both paragraph properties and paragraph style

Attacching a one-paragraph document: you can test yourself: 
- change the paragraph property and close the dialog -> next time you open the dialog you see that nothing has changed

- same thing with the paragraph style
Comment 9 Julien Nabet 2024-04-27 08:56:27 UTC
Patch submitted here:
https://gerrit.libreoffice.org/c/core/+/166774
Comment 10 Commit Notification 2024-04-28 11:38:16 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/83236587bfca52513515b0b7a7dbfa18eed11503

tdf#159625: fix "allow to split paragraph"

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2024-04-29 16:57:42 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/cf370be03dfc6eb2cd4643548f2f25ad3bfc6612

tdf#159625: fix "allow to split paragraph"

It will be available in 24.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2024-04-29 18:26:00 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-24-2-3":

https://git.libreoffice.org/core/commit/467b70a96820c70916015bb3386f219432e9c915

tdf#159625: fix "allow to split paragraph"

It will be available in 24.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Julien Nabet 2024-06-06 13:03:13 UTC
No feedback for the moment, let's put this one to FIXED.

If someone still reproduce this with 24.2.3 minimum, don't hesitate to reopen this tracker.