tdf#159625: fix "allow to split paragraph"

2 pbs here:
1) bug described in the bugtracker, the uncheck isn't kept
=> just remove all the buggy GetOldItem stuff
2) after unchecked the option then saving the file and reloading the file, the option is still checked
=> change the buggy
rOutSet->Put( SvxFormatSplitItem( eState == TRISTATE_FALSE, _nWhich ) );
to
rOutSet->Put( SvxFormatSplitItem( eState == TRISTATE_TRUE, _nWhich ) );

In fact, I just mimicked the code used for "keep paragraphs" which works well.

Also change the QA test since "allow to split paragraph" is checked by default
so if the QA simulates a click on it, we expect the value to be false when dialog is opened again

Change-Id: I947feb02e0c282304621a252ad5e4c168c1d295a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/166774
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>